# WhispTune

./: README.md  desktop.ini  index.html  package-lock.json  package.json  styles.css
src/: index.html  styles.css  whisptune.js
src-tauri/: .gitignore  Cargo.toml  LICENSE.txt  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/libs/: package-lock.json
