[package]
name = "whisptune"
version = "2.2.0"
description = "A Tauri App"
authors = ["UchihaPaul"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[[bin]]
name = "WhispTune"
path = "src/main.rs"


[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
walkdir = "2"
tauri-plugin-dialog = "2.2.2"
anyhow = "1.0"
tokio = { version = "1.45", features = ["full", "process"] }
lofty = "0.22.4"
tauri-plugin-updater = "2.7.1"
thiserror = "2.0.12"
